--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,6 @@ jobs:
         with:
           fetch-depth: 0
       - uses: oven-sh/setup-bun@v0.1.8
+      - run: bun install
       - run: bun wiptest
 
